# cover_webapp

./: .gitignore  AGENTS.md  deploy_quick.sh  restart.sh  stop.sh  verification.md
.codex/: operations-log.md  review-report.md  testing.md
cover_webapp_backend/: pyproject.toml
cover_webapp_backend/src/cover_webapp_backend/: __init__.py  api.py  coverage_service.py  db.py
cover_webapp_backend/src/cover_webapp_backend/data/: cover_webapp.db
cover_webapp_backend/tests/: __init__.py  test_coverage_import.py  test_db_init.py
server/: coverage.py  coverage_random.py  plantcv_server.py  random_forest_model.joblib
webapp/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
webapp/public/: manifest.webmanifest  sw.js
webapp/src/: App.test.ts  App.vue  main.ts
