[project]
name = "cover-webapp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hotuns", email = "hedongshu@foxmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "opencv-python",
    "numpy",
    "joblib",
]

[project.scripts]
cover-webapp-backend = "cover_webapp_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
